--- a/terminal-jni/src/main/resources/META-INF/native-image/org.jline/jline-terminal-jni/native-image.properties
+++ b/terminal-jni/src/main/resources/META-INF/native-image/org.jline/jline-terminal-jni/native-image.properties
@@ -1,1 +1,1 @@
-Args = -H:ResourceConfigurationResources=${.}/resource-config.json -H:ReflectionConfigurationResources=${.}/reflection-config.json
+Args = -H:+UnlockExperimentalVMOptions -H:ResourceConfigurationResources=${.}/resource-config.json -H:ReflectionConfigurationResources=${.}/reflection-config.json
