--- a/terminal/src/main/resources/META-INF/native-image/org.jline/jline-terminal/native-image.properties
+++ b/terminal/src/main/resources/META-INF/native-image/org.jline/jline-terminal/native-image.properties
@@ -1,1 +1,1 @@
-Args = -H:ResourceConfigurationResources=${.}/resource-config.json -H:ReflectionConfigurationResources=${.}/reflection-config.json
+Args = -H:+UnlockExperimentalVMOptions -H:ResourceConfigurationResources=${.}/resource-config.json -H:ReflectionConfigurationResources=${.}/reflection-config.json
