Fix jansi and windows

--- a/jansi-core/src/main/resources/META-INF/native-image/org.jline/jansi/native-image.properties
+++ b/jansi-core/src/main/resources/META-INF/native-image/org.jline/jansi/native-image.properties
@@ -1,1 +1,1 @@
-Args=--features=org.jline.jansi.internal.NativeImageFeature
+Args = -H:+UnlockExperimentalVMOptions -H:ResourceConfigurationResources=${.}/resource-config.json 
