--- a/jline/pom.xml
+++ b/jline/pom.xml
@@ -400,7 +400,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>jdk21</id>
+                        <id>jdk22</id>
                         <goals>
                             <goal>compile</goal>
                         </goals>
@@ -408,11 +408,10 @@
                             <includes>
                                 <include>**/ffm/*.java</include>
                             </includes>
-                            <release>21</release>
+                            <release>22</release>
                             <compilerArgs>
-                                <arg>-Xlint:all,-options,-preview</arg>
+                                <arg>-Xlint:all,-options</arg>
                                 <arg>-Werror</arg>
-                                <arg>--enable-preview</arg>
                             </compilerArgs>
                         </configuration>
                     </execution>
