Update maven to 3.9.6 (fixes #944)

--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -41,4 +41,4 @@ jobs:
           cache: maven
 
       - name: Build with maven
-        run: mvn --no-transfer-progress verify
+        run: ./mvnw --no-transfer-progress verify
