--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -22,8 +22,6 @@ on:
     branches:
       - master
   pull_request:
-    branches:
-      - master
 
 jobs:
   compile:
@@ -33,19 +31,14 @@ jobs:
         os: [ ubuntu-latest, ubuntu-20.04, windows-latest, macos-latest ]
         java: [ '21' ]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java }}
-
-      - uses: actions/cache@v1
-        with:
-          path: ~/.m2/repository
-          key: ${{ matrix.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ matrix.os }}-maven-
+          distribution: temurin
+          cache: maven
 
       - name: Build with maven
         run: mvn --no-transfer-progress verify
