Fix typo that breaks native image compilation

--- a/native/src/main/resources/META-INF/native-image/org.jline/jline-native/reflection-config.json
+++ b/native/src/main/resources/META-INF/native-image/org.jline/jline-native/reflection-config.json
@@ -1,6 +1,6 @@
 [
   {
-    "name" : "org.jline.native.CLibrary",
+    "name" : "org.jline.nativ.CLibrary",
     "allDeclaredConstructors" : false,
     "allPublicConstructors" : false,
     "allDeclaredMethods" : false,
