--- a/native/src/main/resources/META-INF/native-image/org.jline/jline-native/native-image.properties
+++ b/native/src/main/resources/META-INF/native-image/org.jline/jline-native/native-image.properties
@@ -1,1 +1,4 @@
-Args = -H:+UnlockExperimentalVMOptions -H:ResourceConfigurationResources=${.}/resource-config.json -H:ReflectionConfigurationResources=${.}/reflection-config.json -H:JNIConfigurationResources=${.}/jni-config.json 
+Args = -H:+UnlockExperimentalVMOptions \
+       -H:ResourceConfigurationResources=${.}/resource-config.json \
+       -H:ReflectionConfigurationResources=${.}/reflection-config.json \
+       -H:JNIConfigurationResources=${.}/jni-config.json
