--- a/console/pom.xml
+++ b/console/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.26.0</version>
+        <version>3.26.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jline-console</artifactId>
