--- a/native/src/main/resources/META-INF/native-image/org.jline/jline-native/jni-config.json
+++ b/native/src/main/resources/META-INF/native-image/org.jline/jline-native/jni-config.json
@@ -54,7 +54,7 @@
       { "name": "STD_INPUT_HANDLE" },
       { "name": "STD_OUTPUT_HANDLE" },
       { "name": "STD_ERROR_HANDLE" },
-      { "name": "INVALID_HANDLE_VALUE," }
+      { "name": "INVALID_HANDLE_VALUE" }
     ]
   },
   {
