--- a/terminal-jni/pom.xml
+++ b/terminal-jni/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.26.2</version>
+        <version>3.26.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>jline-terminal-jni</artifactId>
