--- a/pom.xml
+++ b/pom.xml
@@ -699,6 +699,7 @@
                     <goals>deploy</goals>
                     <preparationProfiles>bundle,javadoc,format-check,sign</preparationProfiles>
                     <releaseProfiles>bundle,javadoc,format-check,sign</releaseProfiles>
+                    <tagNameFormat>jline-@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
 
