--- a/native/Makefile.common
+++ b/native/Makefile.common
@@ -152,6 +152,11 @@ Windows-x86_64_CCFLAGS      := -D_JNI_IMPLEMENTATION_ -Itarget/inc -Itarget/inc/
 Windows-x86_64_LINKFLAGS    := -Wl,--kill-at -shared -static-libgcc
 Windows-x86_64_LIBNAME      := jlinenative.dll
 
+Windows-arm64_CC           := $(CROSS_PREFIX)gcc
+Windows-arm64_STRIP        := $(CROSS_PREFIX)strip
+Windows-arm64_CCFLAGS      := -D_JNI_IMPLEMENTATION_ -Itarget/inc -Itarget/inc/windows -Os
+Windows-arm64_LINKFLAGS    := -Wl,--kill-at -shared -static-libgcc
+Windows-arm64_LIBNAME      := jlinenative.dll
 
 CC        := $($(target)_CC)
 STRIP     := $($(target)_STRIP)
