--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.26.3</version>
+        <version>3.26.4-SNAPSHOT</version>
     </parent>
     <artifactId>jline-groovy</artifactId>
     <name>JLine Groovy</name>
