Drop fusesource jansi
Replace everything in JLine with jansi-core own module.
Also, some fixes made, as interpolation did not happen,
etc.

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -94,8 +94,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.fusesource.jansi</groupId>
-            <artifactId>jansi</artifactId>
+            <groupId>org.jline</groupId>
+            <artifactId>jansi-core</artifactId>
         </dependency>
 
         <dependency>
