--- a/terminal-jansi/pom.xml
+++ b/terminal-jansi/pom.xml
@@ -28,8 +28,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.fusesource.jansi</groupId>
-            <artifactId>jansi</artifactId>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-native</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jansi-core</artifactId>
         </dependency>
 
         <dependency>
