--- a/native/pom.xml
+++ b/native/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.27.0-SNAPSHOT</version>
+        <version>3.27.0</version>
     </parent>
 
     <artifactId>jline-native</artifactId>
