--- a/jansi/pom.xml
+++ b/jansi/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.27.1</version>
+        <version>3.27.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>jansi</artifactId>
